# gr-SatelliteModem

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: SatelliteModemConfig.cmake
docs/: README.SatelliteModem
examples/: RxOverUDP.py  TxOverUDP.py  transceiverLoopbackSimulator.grc  transceiverLoopbackSimulator.py  transceiverLoopbackSimulator_noGUI.grc  transceiverLoopbackSimulator_noGUI.py  transceiverLoopbackUHD.grc  transceiverLoopbackUHD.py  transceiverLoopbackUHD_noGUI.grc  transceiverLoopbackUHD_noGUI.py
grc/: CMakeLists.txt  SatelliteModem_Configuration.xml  SatelliteModem_DPSKDemodulator.xml  SatelliteModem_DPSKReceiver.xml  SatelliteModem_DPSKTransmitter.xml  SatelliteModem_Deframer.xml  SatelliteModem_Depacketizer.xml  SatelliteModem_FECDecoder.xml  SatelliteModem_FECEncoder.xml  SatelliteModem_Framer.xml  SatelliteModem_Packetizer.xml  SatelliteModem_PreambleDetector.xml  SatelliteModem_SyncPreamble.xml  SatelliteModem_depadForLDPC.xml  SatelliteModem_padForLDPC.xml
lib/: CMakeLists.txt  CRC16.hpp  DPSKDemodulator_impl.cc  DPSKDemodulator_impl.h  Deframer_impl.cc  Deframer_impl.h  Framer_impl.cc  Framer_impl.h  PreambleDetector_impl.cc  PreambleDetector_impl.h  SyncPreamble_impl.cc  SyncPreamble_impl.h  depadForLDPC_impl.cc  depadForLDPC_impl.h  padForLDPC_impl.cc  padForLDPC_impl.h  qa_SatelliteModem.cc  qa_SatelliteModem.h  test_SatelliteModem.cc
python/: CMakeLists.txt  DPSKReceiver.py  DPSKTransmitter.py  Depacketizer.py  FECDecoder.py  FECEncoder.py  Packetizer.py  __init__.py
swig/: CMakeLists.txt  SatelliteModem_swig.i
(+18 files in other folders)
